# greenkey-asrtoolkit

./: .flake8  .gitignore  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  NOTICE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pythonpackage.yml
asrtoolkit/: __init__.py  align_json.py  clean_formatting.py  combine_audio_files.py  convert_transcript.py  deformatting_utils.py  degrade_audio_file.py  extract_excel_spreadsheets.py  prepare_audio_corpora.py  split_audio_file.py  split_corpus.py  validate_stm.py  wder.py  wer.py
asrtoolkit/alignment/: align.py  align_utils.py  aligned_doc.py  initialize_logger.py  preprocess_gk_json.py  preprocess_txt.py
asrtoolkit/data_handlers/: data_handlers_common.py  gecko.py  greenkey.py  html.py  json.py  rttm.py  srt.py  stm.py  truleo.py  txt.py  (+2 more)
samples/: BillGatesTEDTalk.html  BillGatesTEDTalk.json  BillGatesTEDTalk.srt  BillGatesTEDTalk.stm  BillGatesTEDTalk.txt  BillGatesTEDTalk.vtt  BillGatesTEDTalk_intentionally_poor_transcription.txt  BillGatesTEDTalk_transcribed.stm  BillGatesTEDTalk_transcribed.txt  FinancialStatementFY18Q4.xlsx  invalid.stm  simple_test.json  simple_test.stm  simple_test.txt
tests/: docker_test.sh  no_speaker.json  run_tests.sh  small-test-file.stm  test_alignment.py  test_clean_up.py  test_conversion.py  test_initialization.py  test_remove_invalid_lines.py  test_split_audio_file.py  test_split_corpus.py  test_wer.py  test_xlsx_extraction.py  utils.py
(+14 files in other folders)
