[tool.black]

line-length = 88
target-version = ['py38']
include = '\.py(x|i)?$'

[tool.poetry]
name = "asrtoolkit"
version = "0.2.6"
description = "ASRToolkit provides tools for automatic speech recognition (ASR) file conversion and corpora organization"
authors = ["Matthew Goldey <https://github.com/mgoldey>","Tejas Shastry <https://github.com/tshastry>","Amy Geojo <https://github.com/ageojo>","Svyat Vergun <https://github.com/sv-github>","Ashley Shultz <https://github.com/AGiantSquid>","Colin Brochtrup <https://github.com/cbrochtrup>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
beautifulsoup4 = "*"
editdistance = "*"
num2words = "*"
tqdm = "*"
webvtt-py = "*"
rapidfuzz = "*"
fire = "*"
regex = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pylint = "*"
flake8 = "*"
radon = "*"
xenon = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
clean_formatting = "asrtoolkit.clean_formatting:cli"
combine_audio_files = "asrtoolkit.combine_audio_files:main"
convert_transcript = "asrtoolkit.convert_transcript:cli"
degrade_audio_file = "asrtoolkit.degrade_audio_file:cli"
prepare_audio_corpora = "asrtoolkit.prepare_audio_corpora:cli"
split_audio_file = "asrtoolkit.split_audio_file:cli"
wer = "asrtoolkit.metrics.wer:cli"
wder = "asrtoolkit.metrics.wder:cli"
tswde = "asrtoolkit.metrics.tswde:cli"